Fix Bento icon wrong color

--- a/frontend/src/components/layout/navigation/AppPicker.module.scss
+++ b/frontend/src/components/layout/navigation/AppPicker.module.scss
@@ -18,6 +18,7 @@
   border-radius: $border-radius-sm;
 
   svg {
+    fill: $color-white;
     color: $color-white;
 
     &.premium {
